# ftp-lite

./: CMakeLists.txt  LICENSE  README.md
gui/: ClientWindow.cpp  ClientWindow.hpp  ClientWindow.ui  ServerWindow.cpp  ServerWindow.hpp  ServerWindow.ui
include/: ClientApp.hpp  CommandParser.hpp  CompressionHelper.hpp  FileTransferEngine.hpp  Logger.hpp  MetadataManager.hpp  ServerApp.hpp
src/: ClientApp.cpp  CommandParser.cpp  CompressionHelper.cpp  FileTransferEngine.cpp  Logger.cpp  MetadataManager.cpp  ServerApp.cpp  main_client.cpp  main_server.cpp
storage/: metadata.db
